--- a/_portfolio/a_2024Q1-Q2.md
+++ b/_portfolio/a_2024Q1-Q2.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: "2024 Photo Gallery"
 excerpt: "Some Records<br/><img src='/images/camera/20240316.jpg' style='width: 500px; height: auto;'>"
 collection: portfolio
@@ -30,4 +30,4 @@ collection: portfolio
 <img src='/images/camera/20240417.jpg'>
 
 2024/03/27--University Town of Shenzhen--Shenzhen, China  
-<img src='/images/camera/20240327.jpg'>
+<img src='/images/camera/20240327.jpg'> -->
